[tool.poetry]
name = "project-ubenyo"
version = "0.1.0"
description = ""
authors = ["lxRbckl <lxrbckl@gmail.com>"]
readme = "README.md"
packages = [{include = "project_ubenyo"}]

[tool.poetry.dependencies]
python = "^3.8"
pyautogui = "^0.9.53"
tox = "^4.5.1"
pillow = "^9.5.0"
torch = "^2.0.1"
opencv-python = "^4.7.0.72"
pandas = "^2.0.1"
requests = "^2.30.0"
psutil = "^5.9.5"
torchvision = "^0.15.2"
pyyaml = "^6.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
